Added buck output folder to ignore list'
'

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Buck
+/buck-out
+/.buckconfig.local
+/.buckd
+/.buckjavaargs.local
+/.bucklogging.local.properties
+.fakebuckversion
+/.nobuckcheck
+
 # Prerequisites
 *.d
 
